--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -5,9 +5,13 @@ description: Your first document
 
 Welcome to the docs! You can start writing documents in `/content/docs`.
 
+import { HelloWorld } from "@/registry/new-york/blocks/hello-world/hello-world";
+
+<HelloWorld />
+
 ## What is Next?
 
 <Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
+  <Card title='Learn more about Next.js' href='https://nextjs.org/docs' />
+  <Card title='Learn more about Fumadocs' href='https://fumadocs.vercel.app' />
 </Cards>
