--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -3,11 +3,11 @@ title: Hello World
 description: Your first document
 ---
 
+import { ComponentPreview } from "@/components/common/component-preview";
+
 Welcome to the docs! You can start writing documents in `/content/docs`.
 
-import { HelloWorld } from "@/registry/new-york/blocks/hello-world/hello-world";
-
-<HelloWorld />
+<ComponentPreview component='hello-world' />
 
 ## What is Next?
 
